backlog-userservice: Fixes made on domain files by using hardcoded equals & hashcode to avoid performance issues, and made some minor updates for following best practices.